fixed horizontal scrolling issue

--- a/default.css
+++ b/default.css
@@ -10,22 +10,22 @@ body {
 
 
 nav {
-    width: 100%;
+    width: 100vw;
     text-align:center;
     position: fixed;
 }
 
 nav li {
     display: inline-block;
-    padding: 0 5%;
+    padding: 0 3%;
 }
 
 nav a{
     color:rgb(255, 255, 255);
     text-decoration: none;
-    font-size: 30px;
+    font-size: 4vh;
     font-weight: 100;
-    letter-spacing: 3px;
+    letter-spacing: 1px;
 }
 
 a:hover {
@@ -33,27 +33,35 @@ a:hover {
 }
 
 .circle {
-    width: 200px;
-    height: 200px;
+    width: 30vh;
+    height: 30vh;
     background-color: white;
     display: inline-block;
     border-radius: 50%;
     position:relative;
     top: 20vh;
-    right: 2vh;
+    right: 0.5%
 }
 
 .middle {
     text-align: center;
+    height: 50vh;
 }
 
 span p {
     background-color:transparent;
-    font-size: 120px;
+    font-size: 15vh;
     color: rgb(175, 219, 196);
     text-align:center;
     position: absolute;
     width: 100%;
     display: block;
     margin: 15% 0 0% 0%;
+}
+
+h1.business-name {
+    color:white;
+    text-align: center;
+    font-size: 20vh;
+    position: relative;
 }
